Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus esse quaerat distinctio aperiam ducimus quam ullam, perspiciatis eligendi vero eum nesciunt tenetur ipsum labore neque, enim harum quidem doloremque nihil.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ullam vero assumenda temporibus quisquam vel nobis consequuntur placeat minus, doloribus et exercitationem distinctio officiis dolore unde ad, quos eum? Non?</p>
 </body>
 </html>
